# bachatrainer

./: .gitattributes  .gitignore  ADDING_BACHATA_SONGS.md  HOW_POSES_WORK.md  README.md  SETUP.md  package-lock.json
.kiro/specs/executorch-1.0/: design.md  requirements.md  tasks.md
.kiro/specs/executorch-integration/: design.md  requirements.md  tasks.md
.kiro/specs/modernization/: design.md  requirements.md  tasks.md
.kiro/specs/tfjs-migration/: design.md  requirements.md  tasks.md
mobile/: app.json  jest.config.js  jest.polyfills.js  jest.setup.js  metro.config.js  package-lock.json  package.json
mobile/__tests__/device/: performance-benchmarks.test.ts
mobile/constants/: ModelConfig.ts
mobile/services/: assetLoader.ts  database.ts  poseDetection.ts  scoreCalculator.ts  tfPoseDetection.ts
mobile/store/: gameStore.ts
mobile/types/: detection.ts  game.ts
mobile/utils/: angleCalculator.ts
python-tools/: PHASE1_COMPLETION_SUMMARY.md  POSE_MODEL_RESEARCH.md  QUICKSTART.md  README.md  VALIDATION_REPORT.md  batch_process.py  batch_process_yolov8.py  convert_to_720p.py  create_lightweight_model.py  download_model.py  download_youtube.py  export_executorch.py  export_model.py  export_model_yolov8.py  preprocess_video.py  preprocess_video_executorch.py  preprocess_video_yolov8.py  pyproject.toml  regenerate_poses.py  setup_models.sh  setup_yolov8.py  test_export.py  test_preprocess.py  validate_json.py  validate_model.py  validate_poses.py  video_tools.py  visualize_tracking.py  yolov8_pose_model.py
python-tools/models/: MODEL_INFO.md  README.md
(+65 files in other folders)
