[project]
name = "bachatrainer-tools"
version = "2.0.0"
description = "Development tools for Bacha Trainer - Video preprocessing and pose extraction"
requires-python = ">=3.12,<3.13"
dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=2.1.2",
    "pillow>=11.0.0",
    "tqdm>=4.66.0",
    "executorch>=1.0.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
